Improved UI of the navbar, and issue where content is hidden underneath the navbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+ .add-margin {
+     margin: 10px;
+ }
+
+ h1 {
+    text-align: center;
+}
